Update README with project details and instructions
Added project overview, features, tech stack, prerequisites, configuration, running instructions, API overview, examples, testing, project structure, troubleshooting, and notes.